--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">Airplanes</string>
+    <string name="app_name">Flights</string>
+    <string name="flightdetails_name">Details</string>
 </resources>
